# f1-thing

./: .env  Cargo.toml  f1.db  readme.md
migrations/2023-06-20-031023_create_tables/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
